<resources>
    <string name="app_name">Calculator</string>
    <string name="calculator">Calculator</string>
    <string name="enter_first_number">Enter first number</string>
    <string name="enter_second_number">Enter second number</string>
    <string name="addSymbol">+</string>
    <string name="subtractSymbol">-</string>
    <string name="multiplySymbol">*</string>
    <string name="divideSymbol">/</string>
</resources>